# Patrus

./: .gitignore  .gitmodules  ExtraNotes.md  LanguageFeatures.md  LoxLanguageNotes.md  Makefile  Patrus.cabal  Patrus.lhs  Patrus.md  README.md  stack.yaml
app/: jloxlexMatch.hs  main.hs
examples/lox/: comparison.lox  functions.lox  helloworld.lox  operators.lox  variables.lox
examples/lox/classes/: assign_to_instance.lox  class_constructor.lox  class_instance.lox  first_class_classes.lox  single_inheritance.lox  superclass_methods.lox  this_keyword.lox
examples/lox/functions/: decl_test.lox  fib.lox
examples/lox/lexing/: multiline_string.lox  no_escape_quote.lox  pathological_multiline_string.lox
examples/lox/parsing/: callback.lox
examples/lox/primitives/: booleans.lox  numbers.lox  strings.lox
src/: Patrus.hs
src/Patrus/: AST.hs  Env.hs  Environment.hs  Eval.hs  EvalK.hs  Interpret.hs  Lexer.x  Parser.y  Types.hs
src/Patrus/AST/: PrettyPrinter.hs
src/Patrus/Eval/: PrettyPrinter.hs  Pure.hs
test/Patrus/: BindingSpec.hs  EvaluationSpec.hs  FunctionSpec.hs  ParserSpec.hs
