cabal-version:      2.4
name:               Patrus
version:            0.0.0.1

-- A short (one-line) description of the package.
synopsis: Crafting Interpreters but in Haskell

-- A longer description of the package.
description: A punt on Colin's favorite book Crafting Interpreters but in Haskell

-- A URL where users can report bugs.
bug-reports: https://github.com/adpextwindong/Patrus/issues

-- The license under which the package is released.
license: BSD-2-Clause
author:             George Takumi Crary
maintainer:         tcrary@gmail.com

-- A copyright notice.
-- copyright:
category: Language
extra-source-files:
    README.md

library
    build-depends:  base ^>=4.13.0.0
                   --Lexer deps
                   ,array >= 0.5.4.0
                   ,mtl >= 2.2.2
    exposed-modules:
        Patrus.Parser
        Patrus.Lexer
        Patrus.AST
        Patrus.AST.PrettyPrinter
    hs-source-dirs: src/

executable PatrusMain
    main-is:          app/main.hs
    build-depends:    base ^>=4.13.0.0, Patrus
    build-tool-depends: alex:alex, happy:happy
    hs-source-dirs:   .
    default-language: Haskell2010

executable PatrusLiterate
    main-is:          Patrus.lhs
    build-depends:    base ^>=4.13.0.0, Patrus
    build-tool-depends: alex:alex, happy:happy
    hs-source-dirs:   .
    default-language: Haskell2010

executable jloxlexMatch
    main-is:          app/jloxlexMatch.hs
    build-depends:    base ^>=4.13.0.0, Patrus
    build-tool-depends: alex:alex, happy:happy
    hs-source-dirs:   .
    default-language: Haskell2010

source-repository head
    type:   git
    location: https://github.com/adpextwindong/Patrus/
