cabal-version:      2.4
name:               Patrus
version:            0.0.0.1

-- A short (one-line) description of the package.
synopsis: Crafting Interpreters but in Haskell

-- A longer description of the package.
description: A punt on Colin's favorite book Crafting Interpreters but in Haskell

-- A URL where users can report bugs.
bug-reports: https://github.com/adpextwindong/Patrus/issues

-- The license under which the package is released.
license: BSD-2-Clause
author:             George Takumi Crary
maintainer:         tcrary@gmail.com

-- A copyright notice.
-- copyright:
category: Language
extra-source-files:
    README.md

library
    build-depends:  base >= 4.13.0.0
                   --Lexer deps
                   ,array >= 0.5.4.0
                   ,containers
                   ,transformers
                   ,mtl >= 2.2.2
                   ,extra
    exposed-modules:
        Patrus.Parser
        Patrus.Lexer
        Patrus.Eval
        Patrus.Eval.PrettyPrinter
        Patrus.Environment
        Patrus.Types
        Patrus.Interpret
        Patrus
    hs-source-dirs: src/

executable PatrusMain
    main-is:          app/main.hs
    build-depends:    base >=4.13.0.0, Patrus
    build-tool-depends: alex:alex, happy:happy
    hs-source-dirs:   .
    default-language: Haskell2010

source-repository head
    type:   git
    location: https://github.com/adpextwindong/Patrus/

test-suite patrus-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Patrus.ParserSpec
        Paths_Patrus
    hs-source-dirs:
        test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        QuickCheck
       ,base >= 4
       ,containers
       ,hspec
       ,hspec-discover
       ,Patrus
    default-language: Haskell2010
